FIX: menubar button backgrounds different on firefox

--- a/packages/frontend/src/components/rich_text_editor/rich_text_editor.css
+++ b/packages/frontend/src/components/rich_text_editor/rich_text_editor.css
@@ -85,6 +85,7 @@
     padding: 3px;
     border: none;
     cursor: pointer;
+    background-color: transparent; /* override default on firefox */
 }
 
 .menubar button.active {
